Added unit tests.

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,6 @@ fabric.properties
 # End of https://www.gitignore.io/api/phpstorm
 
 /zf-test/
+/report
+/phpunit.junit.xml
+.phpunit.result.cache
