--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,4 +5,15 @@
             <directory>./test</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./src</directory>
+            <file>./public.html</file>
+        </whitelist>
+    </filter>
+    <logging>
+        <log type="coverage-html" target="./report" lowUpperBound="35"
+             highLowerBound="70"/>
+        <log type="junit" target="./phpunit.junit.xml"/>
+    </logging>
 </phpunit>
