Mucl with config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - run: composer run-script cs-check
       - run: composer run-script test
       - store_test_results:
-          path: report/
+          #path: report/
           path: phpunit.junit.xml
       - store_artifacts:
           path: report/
