--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,12 +34,13 @@ jobs:
             - vendor
 
       - run: composer run-script lint
-      - run: composer run-script phpmd
+      # TODO: Fix mess detection
+      #- run: composer run-script phpmd
       - run: composer run-script cs-check
       - run: composer run-script test
       - store_test_results:
-          #path: report/
-          path: phpunit.junit.xml
+          path: junit/ 
       - store_artifacts:
-          path: report/
-          #path: phpunit.junit.xml
+          paths: 
+            - report/
+            - junit/
