--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,4 @@ jobs:
       - store_test_results:
           path: junit/ 
       - store_artifacts:
-          paths: 
-            - report/
-            - junit/
+          path:  report/
