--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,6 @@
     <logging>
         <log type="coverage-html" target="./report" lowUpperBound="35"
              highLowerBound="70"/>
-        <log type="junit" target="junit/phpunit.xml"/>
+        <log type="junit" target="junit/phpunit/results.xml"/>
     </logging>
 </phpunit>
