--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,8 +12,11 @@
         </whitelist>
     </filter>
     <logging>
-        <log type="coverage-html" target="./report" lowUpperBound="35"
+        <log type="coverage-html"
+             target="./report/html"
+             lowUpperBound="35"
              highLowerBound="70"/>
-        <log type="junit" target="junit/phpunit/results.xml"/>
+        <log type="coverage-clover" target="report/clover.xml"/>
+        <log type="junit" target="report/phpunit.results.xml"/>
     </logging>
 </phpunit>
