fix phplint config

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "cs-check": "phpcs src/ public/ test/",
         "cs-fix": "phpcbf src/ public/ test/",
         "phpmd": "phpmd src/,public/,test text codesize,cleancode,design,naming",
-        "lint": "phplint",
+        "lint": "phplint src index.php",
         "serve": "php -S 0.0.0.0:8080 -t public public/index.php",
         "test": "phpunit"
     }
