--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.4
 jobs:
   build:
     docker:
@@ -42,3 +44,5 @@ jobs:
           path: report/
       - store_artifacts:
           path:  report/
+      - codecov/upload:
+          file: report/clover.xml
